src/objects/Tier__c.object
<CustomObject>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <referenceTo>Metric__c</referenceTo>
        <relationshipLabel>Tiers</relationshipLabel>
        <relationshipName>Tiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Tier</label>
    <nameField>
        <displayFormat>Tier-{00000}</displayFormat>
        <label>Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>